# oxiden

./: Cargo.toml  README.md  release.toml  rustfmt.toml
crates/oxide/: Cargo.toml
crates/oxide-buffer/src/: error.rs  lib.rs  position.rs  range.rs
crates/oxide-buffer/src/storage/: vec.rs
crates/oxide-buffer/tests/: buffer.rs
crates/oxide-core/: Cargo.toml
crates/oxide-core/src/: cursor.rs  document.rs  editor.rs  lib.rs
crates/oxide-core/tests/: editor.rs
crates/oxide-terminal/: Cargo.toml
crates/oxide-terminal/src/: input.rs  lib.rs  render.rs  terminal.rs  viewport.rs
crates/oxide/src/: main.rs
crates/oxiden/: Cargo.toml
crates/oxiden-buffer/: Cargo.toml
crates/oxiden-buffer/src/: buffer.rs  error.rs  lib.rs  position.rs  range.rs  storage.rs
crates/oxiden-buffer/src/storage/: rope.rs  ropey.rs  vec.rs
crates/oxiden-buffer/tests/: buffer.rs  rope.rs  ropey_storage.rs
crates/oxiden-core/: Cargo.toml
crates/oxiden-core/src/: command.rs  config.rs  cursor.rs  document.rs  editor.rs  error.rs  history.rs  lib.rs
crates/oxiden-core/tests/: editor.rs
crates/oxiden-tui/: Cargo.toml
crates/oxiden-tui/src/: input.rs  lib.rs  render.rs  terminal.rs  viewport.rs
crates/oxiden/src/: main.rs
