[workspace]
resolver = "3"

members = [
	"crates/oxiden",
	"crates/oxiden-core",
	"crates/oxiden-tui",
	"crates/oxiden-buffer",
]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
crossterm = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
