[workspace]
resolver = "3"

members = [
	"crates/oxiden",
	"crates/oxiden-core",
	"crates/oxiden-tui",
	"crates/oxiden-buffer",
]

[workspace.dependencies]
thiserror = "2"
crossterm = "0.29"
ropey = "1"

oxiden-buffer = { version = "0.4.2", path = "crates/oxiden-buffer" }
oxiden-core = { version = "0.4.2", path = "crates/oxiden-core" }
oxiden-tui = { version = "0.4.2", path = "crates/oxiden-tui" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false
