[package]
name = "oxide"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Oxide binary crate"

[dependencies]
crossterm.workspace = true

oxide-buffer = { path = "../oxide-buffer" }
oxide-core = { path = "../oxide-core" }
oxide-terminal = { path = "../oxide-terminal" }
