[package]
name = "oxiden-tui"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Oxiden terminal user interface"
repository = "https://github.com/bbehnood/oxiden"
readme = "../../README.md"

[dependencies]
crossterm.workspace = true

oxiden-core.workspace = true
oxiden-buffer.workspace = true
