[package]
name = "oxiden"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Oxiden binary crate"
repository = "https://github.com/bbehnood/oxiden"
readme = "../../README.md"

[dependencies]
crossterm.workspace = true

oxiden-buffer.workspace = true
oxiden-core.workspace = true
oxiden-tui.workspace = true
